# OmegaChess

./: CMakeLists.txt  README.md  main.cpp  struct.txt
controller/: GameController.cpp  GameController.hpp
gui/: BoardView.cpp  BoardView.hpp  MainWindow.cpp  MainWindow.hpp
logic/: Board.cpp  Board.hpp  Piece.hpp  PieceColor.hpp  PieceKind.hpp
tests/: logic_tests.cpp
